# openlf2

./: .gitignore  CMakeLists.txt  README.md  openlf2.exe.txt
include/: bdy.h  file.h  frame.h  global.h  itr.h  object.h
src/: class_global.c  class_global.h  const.c  const.h  lf2.h  openlf2.c  static.c  static.h  util.c  util.h
